--- a/DotNetCoreSqlDb/appsettings.Development.json
+++ b/DotNetCoreSqlDb/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=msdocs-core-sql-jsn-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-jsn-database;User ID=msdocs-core-sql-jsn-server-admin;Password=U0XUGMDO3G3F63O4$"
   }
 }
