--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=msdocs-core-sql-jsn-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-jsn-database;User ID=msdocs-core-sql-jsn-server-admin;Password=U0XUGMDO3G3F63O4$"
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=msdocs-core-sql-jsn-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-jsn-database;User ID=msdocs-core-sql-jsn-server-admin;Password=KL60GN3D462TNN10$",
+    "AZURE_REDIS_CONNECTIONSTRING":"msdocs-core-sql-jsn-cache.redis.cache.windows.net:6380,password=PLJrVcweZ0SbiqTVYIBcTQYi4xb0PVtkWAzCaMieK7g=,ssl=True,defaultDatabase=0"
   }
 }
